@@ -425,3 +425,4 @@ current
 * pheno:   fixed broken scoreboard on more than 30 players
 * pheno:   shoutcasters can now see landmines
 * pheno:   shoutcasters can now see player names
+* pheno:   shoutcasters can also see tank and truck health
